<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimaryContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/container">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/pattern_repeat" />

        <TextView
            android:id="@+id/greetings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="75dp"
            android:fontFamily="@font/adlam_display_regular"
            android:text="@string/welcome_back_to_pawsome_home"
            android:textColor="?attr/colorPrimary"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backButton"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:icon="@drawable/ic_back"
            app:iconSize="24dp"
            android:paddingHorizontal="14dp"
            app:iconPadding="-8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="-100dp"
            app:layout_constraintTop_toBottomOf="parent"
            app:srcCompat="@drawable/cat" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:minHeight="520dp"
        android:background="?attr/colorSurface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/loginButton">


            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp"
                    android:paddingTop="32dp"
                    android:paddingBottom="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/signUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="@font/josefin_sans_regular"
                        android:text="@string/log_in"
                        android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
                        android:textColor="?attr/colorOnSurface" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/emailEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/josefin_sans_regular"
                            android:inputType="textEmailAddress" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/password"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/josefin_sans_regular"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>


            </ScrollView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="-100dp"
                app:layout_constraintTop_toBottomOf="parent"
                app:srcCompat="@drawable/cat" />

        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adlam_display_regular"
            android:text="Log In"
            app:cornerRadius="8dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            app:layout_constraintBottom_toTopOf="@+id/signUpButton"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_marginBottom="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adlam_display_regular"
            android:text="Sign Up"
            app:cornerRadius="8dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginBottom="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.Material3.Button.IconButton.Outlined" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
